# battery-stack

./: .coverage  .dockerignore  CI_SETUP.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/observer-demo/scripts/: run_demo.py
battery-stack/: .gitignore
pkgs/battery-data/: pyproject.toml
pkgs/battery-data/src/battery_data/: __init__.py  schemas.py
pkgs/battery-data/tests/: test_imports.py
pkgs/battery-models/: pyproject.toml
pkgs/battery-models/src/battery_models/: __init__.py  abi.py  toy_kf.py
pkgs/battery-models/tests/: test_imports.py
pkgs/battery-runtime/: pyproject.toml
pkgs/battery-runtime/src/battery_runtime/: __init__.py  adapters.py  scheduler.py
pkgs/battery-runtime/tests/: test_imports.py
pkgs/batteryd/: pyproject.toml
pkgs/batteryd/src/batteryd/: __init__.py
pkgs/batteryd/tests/: test_batteryd_imports.py
pkgs/monitor-ui/: README.md
